@@ -1,3 +1,8 @@
+2010-03-15  Richard Guenther  <rguenther@suse.de>
+
+	PR tree-optimization/43317
+	* gcc.dg/pr43317.c: New testcase.
+
 2010-03-14  Uros Bizjak  <ubizjak@gmail.com>
 
 	* g++.dg/abi/packed1.C: Expect warning on the alpha*-*-*.
